<resources>
    <string name="app_name">Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplicate">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="point">,</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="sinus">sin</string>
    <string name="cosinus">cos</string>
    <string name="tangens">tg</string>
    <string name="cotangens">ctg</string>
    <string name="sqrt">sqrt</string>
    <string name="power">^</string>
    <string name="log">log</string>
    <string name="modulo">%</string>
    <string name="clear">AC</string>
    <string name="erase">⌫</string>
    <string name="pi">𝛑</string>
</resources>
